--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
+  max-width: 100vw;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -13,4 +17,20 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.test {
+  border: 1px solid gray;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.test:after {
+  content: "";
+  position: absolute;
+  border-top: 1px solid red;
+  width: 100%;
+  transform: rotate(45deg);
+  transform-origin: 0% 0%;
 }
